--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,12 @@
 /* ========= Variables =========== */
 
 $font-family: 'Poppins', sans-serif;
-$azul: #36a9e1;
+$colorAmarillo: #F0A500;
 $colorTexto: #373737;
 $colorTexto02: #f3f3f3;
 $textoCentro: center;
 $tamFuente: .1rem;
+$colorFondo: #D8D2CB;
+$azul: #1C658C;
+$azul_claro: #398AB9;
+$azul_dos: #396EB0;
