Entrega Final Desarrollo WEB

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,3 +10,14 @@ $colorFondo: #D8D2CB;
 $azul: #1C658C;
 $azul_claro: #398AB9;
 $azul_dos: #396EB0;
+
+$color-fondo-uno: #f3f3f3;
+$azul_portada: rgba(38,172,255,0.8);
+
+
+$Manjari: 'Manjari', sans-serif;
+$Montserrat: 'Montserrat', sans-serif;
+$Orbitron: 'Orbitron', sans-serif;
+$PermanentMarker: 'Permanent Marker', cursive;
+$Poppins: 'Poppins', sans-serif;
+$Roboto: 'Roboto', sans-serif;
