--- a/sass/_maps.scss
+++ b/sass/_maps.scss
@@ -1,4 +1,4 @@
-$mapMenu:(inicio:black, nosotros:$colorAmarillo, productos:#FF5677, servicios:blue);
+$mapMenu:(inicio:black, nosotros:$colorAmarillo, productos:#FF5677, servicios:blue, contacto:green);
 
 @each $opcion, $color in $mapMenu {
     .#{$opcion}--link{
@@ -8,7 +8,7 @@ $mapMenu:(inicio:black, nosotros:$colorAmarillo, productos:#FF5677, servicios:bl
     }
 }
 
-$mapTitulo:(inicio:black, nosotros:$colorAmarillo, productos:#FF5677, servicios:blue);
+$mapTitulo:(inicio:black, nosotros:$colorAmarillo, productos:#FF5677, servicios:blue, contacto:green);
 
 @each $opcion, $color in $mapTitulo {
     .#{$opcion}--titulo{
