--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Manjari:wght@100&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manjari:wght@100&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Orbitron:wght@400;500;600;700;800;900&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@300&display=swap");
+/*
+font-family: 'Manjari', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Orbitron', sans-serif;
+font-family: 'Permanent Marker', cursive;
+font-family: 'Poppins', sans-serif;
+font-family: 'Roboto', sans-serif;
+*/
 /* ========= Variables =========== */
 /* MIXIN */
 .encabezadoMixin {
@@ -36,6 +44,12 @@
   padding: 0px 10px;
 }
 
+.contacto--link {
+  color: green;
+  text-decoration: none;
+  padding: 0px 10px;
+}
+
 .inicio--titulo {
   text-align: center;
   color: black;
@@ -54,6 +68,11 @@
 .servicios--titulo {
   text-align: center;
   color: blue;
+}
+
+.contacto--titulo {
+  text-align: center;
+  color: green;
 }
 
 /* MIXIN Titulos */
@@ -132,23 +151,255 @@
   }
 }
 
+/* CARDS PORTADA */
+.contenedor_cards_portada {
+  width: 100%;
+  max-width: 1200px;
+  height: 430px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: auto;
+}
+
+.card {
+  width: 330px;
+  height: 430px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px 40px;
+  text-align: center;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+}
+
+.contenedor_cards .cards:hover {
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  -webkit-box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.contenedor_cards .cards img {
+  width: 630px;
+  height: 520px;
+}
+
+.contenedor_cards .cards h4 {
+  color: white;
+  font-weight: 600;
+}
+
+.contenedor_cards .cards p {
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+@media (max-width: 800px) {
+  .contenedor_cards {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.card h4 {
+  color: #f3f3f3;
+  margin: 15px;
+}
+
+.card p {
+  font-size: 13px;
+  color: #f3f3f3;
+}
+
+.card img {
+  width: 300px;
+  height: 300px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-cover {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  margin-top: 5px;
+  background-image: url(../img/portada.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.container-cover::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(38, 172, 255, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container-info-cover {
+  max-width: 800px;
+  height: 500px;
+  margin: auto;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.container-info-cover h2 {
+  font-family: "Permanent Marker", cursive;
+  font-size: 50px;
+  font-weight: 500px;
+  color: #f3f3f3;
+  margin-bottom: 20px;
+}
+
+.container-info-cover p {
+  color: #f3f3f3;
+  font-size: 20px;
+  font-weight: 300px;
+}
+
+.navbar {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 80px;
+  -webkit-box-shadow: 0 4px 25px -22px black;
+          box-shadow: 0 4px 25px -22px black;
+  position: relative;
+  z-index: 2;
+}
+
+.text-menu-selected {
+  background-color: rgba(38, 172, 255, 0.8);
+  color: #373737;
+  border-radius: 0.3em;
+}
+
+.contenedor-img-mia {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.contenedor-img-mia img {
+  width: 250px;
+  display: block;
+  margin: auto;
+  border-radius: 100px;
+  -webkit-box-shadow: 0 4px 25px -1px black;
+          box-shadow: 0 4px 25px -1px black;
+}
+
+.color-ejemplos {
+  color: #398AB9;
+}
+
+.contacto {
+  background-image: url(../img/img_contacto.jpeg);
+  background-size: 100vw 100vh;
+  background-attachment: fixed;
+  margin: 0;
+}
+
+form {
+  width: 450px;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 20px;
+  border-radius: 7px;
+}
+
+h2 {
+  font-family: "Permanent Marker", cursive;
+  color: #f3f3f3;
+  text-align: center;
+  margin: 0;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+input, textarea, label {
+  font-family: "Poppins", sans-serif;
+  color: #f3f3f3;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 7px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: none;
+}
+
+textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
+}
+
+#btn-Enviar {
+  background: #398AB9;
+  color: #f3f3f3;
+  padding: 10px;
+  font-family: "Permanent Marker", cursive;
+  font-size: 20px;
+}
+
+#btn-Enviar:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 450px) {
+  form {
+    width: 100%;
+  }
+}
+
 body {
-  background-color: #D8D2CB;
+  background-color: #f3f3f3;
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
 }
 
 .navbar {
-  background-color: #398AB9;
-  margin-bottom: 0;
+  background-color: #f3f3f3;
 }
 
 .navbar-nav {
-  background-color: #398AB9;
+  background-color: #f3f3f3;
 }
 
 #imagenAbeja {
-  background-color: #398AB9;
+  background-color: #f3f3f3;
 }
 
 .carousel-inner {
