--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -32,10 +32,6 @@ body{
     background-color: $color-fondo-uno;    
 }
 
-#imagenAbeja {
-    background-color: $color-fondo-uno;
-}
-
 .carousel-inner{
     max-height: 39rem;
 }
@@ -77,83 +73,9 @@ footer p{
     color: $colorTexto02;
 }
 
-/* Cards */
-
-.container--cards{
-    width: 90%;
-    margin: 50px auto;
-    margin-bottom: 30px;
-}
-
-.heading{
-    text-align: $textoCentro;
-    font-size:  50px;
-}
 
 
-.card{
-    width: 20%;
-    background: $azul;
-    border: 1px solid $colorTexto;
-    margin-bottom: 50px;
-    transition: 0.3s;
-}
 
-.card-header{
-    text-align: $textoCentro;
-    padding: 50px 10px;
-    background: linear-gradient(to right, #ff416c, #ff4b2b);
-    color: $colorTexto02;
-}
-
-.card-body{
-    padding: 30px 20px;
-    text-align: $textoCentro;
-    font-size: 18px;
-    background: $colorTexto02;
-}
-
-.card-body .btn{
-display: block;
-color: $colorTexto02;
-text-align: $textoCentro;
-background: linear-gradient(to right, #ff416c, #ff4b2b);
-margin-top: 30px;
-text-decoration: none;
-padding: 10px 5px;
-}
-
-.card:hover{
-    transform: scale(1.05);
-    box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
-}
-
-.row--cards{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-flow: wrap;
-}
-
-@media screen and (max-width:1000px){
-    .card {
-        width: 40%;
-    }
-}
-    
-@media screen and (max-width:620px){
-    .container--cards {
-        width: 100%;
-    }
-
-    .heading{
-        padding: 20px;
-        font-size: 20px;
-    }
-    .card {
-        width: 80%;
-    }
-}
 
 .imagen00 {
     width: 400px;
@@ -162,4 +84,12 @@ padding: 10px 5px;
 
 .footer-espacio{
     padding: 20px;
+}
+
+.info-index {
+    margin-top: 50px;
+}
+
+.info-index img{
+    margin-bottom: 50px;
 }
