--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1,119 +1,83 @@
+/* INDEX */
+
 .contenedor_cards {
     width: 100%;
     max-width: 1200px;
-    height: 430px;
+    height: 350px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: auto;
-
+    margin-top: 40px;
 }
 
 .card {
     width: 330px;
-    height: 430px;
+    height: 350px;
     border-radius: 10px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     margin: 0px 80px;
     text-align: center;
     transition: all 0.25s;
-}
-
-.contenedor_cards .cards:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
-.contenedor_cards .cards img{
-    width: 630px;
-    height: 520px;
-}
-
-.contenedor_cards .cards h4{
-    font-weight: 600;
-}
-
-.contenedor_cards .cards p{
-    padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
-}
-
-@media (max-width: 800px){
-    .contenedor_cards{
-        
-        flex-wrap: wrap;
-    }
-}
-
-/* CARDS PORTADA */
-
-
-.contenedor_cards_portada {
-    width: 100%;
-    max-width: 1200px;
-    height: 430px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: auto;
-
-}
-
-.card {
-    width: 330px;
-    height: 430px;
-    border-radius: 10px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    margin: 20px 40px;
-    text-align: center;
-    transition: all 0.25s;
-}
-
-.contenedor_cards .cards:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
-.contenedor_cards .cards img{
-    width: 630px;
-    height: 520px;
-}
-
-.contenedor_cards .cards h4{
-    color: white;
-    font-weight: 600;
-}
-
-.contenedor_cards .cards p{
-    padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
-}
-
-@media (max-width: 800px){
-    .contenedor_cards{
-        
-        flex-wrap: wrap;
-    }
+    background: $azul_claro;
+    color: $colorTexto02;
+    margin-bottom: 50px;
 }
 
 .card h4 {
-    color: $colorTexto02;
-    margin: 15px;
-}
-
-.card p {
-    font-size: 13px;
-    color: $colorTexto02;
+    margin-top: 10px;
+    font-family: $PermanentMarker;
+    color: $colorAmarillo;
 }
 
 .card img {
-    width: 300px;
-    height: 300px;
-    align-items: center;
-    
-    
+    width: 250px; /* ancho */
+    height: 250px; /* alto */
 }
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 800px){
+    .contenedor_cards{
+        width: 100%;
+        height: auto;
+        flex-direction: column;
+    }
+
+    .card {
+        height: auto; /* alto */
+        
+    }
+
+    .card img {
+        width: auto; /* ancho */
+        height: auto; /* alto */
+    }
+    
+
+}
+
+@media screen and (max-width:1000px){
+    .card {
+        width: 40%;
+    }
+}
+    
+@media screen and (max-width:620px){
+    .container--cards {
+        width: 100%;
+    }
+
+    .heading{
+        padding: 20px;
+        font-size: 20px;
+    }
+    .card {
+        width: 80%;
+    }
+}
+ /* Fin INDEX */ 
